--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -96,5 +96,17 @@
         </tr>
         {% endfor %}
     </table>
+    <BR>
+        <BR>
+            <br>
+    <table>
+        <tr>
+            <td>
+    <form style="text-align: center;" action="/message_to_all"  >
+        <button style="text-align: center;background-color: lightgreen; border-radius: 3px;" type="submit">BROADCAST MESSAGE TO ALL USERS</button>
+    </form>
+</td>
+</tr>
+</table>
 </body>
 </html>
