--- a/templates/message_to_all.html
+++ b/templates/message_to_all.html
@@ -43,9 +43,9 @@
     </style>
 </head>
 <body>
-    <h1>Send Message</h1>
+    <h1>Broadcast message to all users</h1>
     <BR><BR>
-<form action="/broadcast_message" >
+<form action="/broadcast_message" method="POST" >
   <label for="message">Message:</label>
   <input type="text" id="message" name="message">
   <button type="submit">Send Message</button>
