--- a/templates/live_preview3.html
+++ b/templates/live_preview3.html
@@ -2,14 +2,11 @@
 <html>
 <head>
     <title>Leaflet Map Example</title>
-    <!-- Include Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
-    <!-- Include Leaflet JavaScript -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
     <style>
-        /* Set the size of the map container */
         html, body, #map {
             margin: 0;
             padding: 0;
@@ -19,50 +16,53 @@
     </style>
 </head>
 <body>
-    <!-- The div element for the map -->
     <div id="map"></div>
 
     <script>
-        // The URL of your georeferenced image
         var imageUrl = '/static/Ground_Floor.jpg';
 
-        // Create a new image object
         var img = new Image();
 
-        // Once the image has loaded, adjust the size of the map container
         img.onload = function() {
             document.getElementById('map').style.width = this.width + 'px';
             document.getElementById('map').style.height = this.height + 'px';
 
-            // The bounds of your image (southwest and northeast corners)
             var imageBounds = [[10.156198822,76.282620304],[10.157959005,76.281164333]];
 
-            // Initialize the map
-            var map = L.map('map').fitBounds(imageBounds, { maxZoom: 19 });
-
-            // Add a tile layer from OpenStreetMap
+            var map = L.map('map', {
+                maxZoom: 22, 
+                minZoom: 0  
+            }).setView([10.156439549115825, 76.28382686190689], 18);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
             }).addTo(map);
 
-            // Add the image to the map as an overlay
             L.imageOverlay(imageUrl, imageBounds).addTo(map);
 
-            // Function to update markers
+            
             function updateMarkers() {
-               // Log the update
-                // Loop over the data_list and add a marker for each location
-                {% for data in data_list %}
-                    var userLocation = [{{ data.location.latitude }}, {{ data.location.longitude }}];
-                    L.marker(userLocation).addTo(map);
-                           {% endfor %}
-            }
+    fetch('/get_coordinates')
+        .then(response => response.json())
+        .then(data_list => {
+            map.eachLayer(layer => {
+                if (layer instanceof L.Marker) {
+                    map.removeLayer(layer);
+                }
+            });
 
-            // Update markers every 2 seconds
+            data_list.forEach(data => {
+                var userLocation = [data.location.latitude, data.location.longitude];
+                var marker = L.marker(userLocation).addTo(map);
+                
+                var userUid = data.username;
+                marker.bindTooltip(`${userUid}`);
+            });
+        })
+        .catch(error => console.error('Error fetching coordinates:', error));
+}
             setInterval(updateMarkers, 2000);
         };
 
-        // Start loading the image
         img.src = imageUrl;
     </script>
 </body>
